[package]
name = "bolt-tauri"
version = "0.12.5"
default-run = "bolt-tauri"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
bolt_core = { version = "0.12.5", path = "../bolt_core/core" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
webbrowser = "0.8.3"
lazy_static = "1.4.0"
dirs = "4.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
