[package]
name = "bolt_core"
version = "0.12.4"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Build and test APIs"
homepage = "https://github.com/hiro-codes/bolt"
repository = "https://github.com/hiro-codes/bolt"
keywords = ["api", "cli"]
categories = ["command-line-utilities"]


[dependencies]
bolt_common = { version = "0.12.4", path = "../common" }
bolt_http = { version = "0.12.4", path = "../http" }
bolt_ws = { version = "0.12.4", path = "../ws" }
bolt_tcp = { version = "0.12.4", path = "../tcp" }
bolt_udp = { version = "0.12.4", path = "../udp" }
bolt_servers = { version = "0.12.4", path = "../servers" }

getrandom = { version = "0.2.9", features = ["js"] } # included because of build error
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tungstenite = "0.19.0"
webbrowser = "0.8.9"
dirs = "5.0.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
actix-web = "4"
actix-files = "0.6.2"
lazy_static = "1.4.0"
url = "2.3.1"
zip = "0.6.5"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
