[package]
name = "bolt_http"
version = "0.11.11"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Build and test APIs"
homepage = "https://github.com/hiro-codes/bolt"
repository = "https://github.com/hiro-codes/bolt"
keywords = ["api", "cli"]
categories = ["command-line-utilities"]


[dependencies]
bolt_common = { path = "../common", version= "0.11.11" }

reqwest = { version = "0.11.14", features = ["json"] }