[package]
name = "bolt_tcp"
version = "0.12.3"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Build and test APIs"
homepage = "https://github.com/hiro-codes/bolt"
repository = "https://github.com/hiro-codes/bolt"
keywords = ["api", "cli"]
categories = ["command-line-utilities"]


[dependencies]
