[package]
name = "bolt_ws"
version = "0.12.5"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Build and test APIs"
homepage = "https://github.com/hiro-codes/bolt"
repository = "https://github.com/hiro-codes/bolt"
keywords = ["api", "cli"]
categories = ["command-line-utilities"]


[dependencies]
bolt_common = { version = "0.12.5", path = "../common" }
lazy_static = "1.4.0"

serde_json = "1.0.96"
tungstenite = "0.19.0"
url = "2.3.1"
